# docs/swagger.json
@@ -27,7 +27,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.ContractAddFile"
+                            "$ref": "#/definitions/entity.Contract"
                         }
                     }
                 ],
@@ -88,6 +88,40 @@
                     "CRMcontract相关接口"
                 ],
                 "summary": "删除合同信息",
+                "parameters": [
+                    {
+                        "description": "data",
+                        "name": "model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.Contract"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.R"
+                        }
+                    }
+                }
+            }
+        },
+        "/crm/contract/deleteFile": {
+            "post": {
+                "description": "删除一个文件",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CRMcontract相关接口"
+                ],
+                "summary": "删除文件",
                 "parameters": [
                     {
                         "description": "data",
@@ -333,6 +367,39 @@
                 }
             }
         },
+        "/log/logger/list": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Logger相关的接口"
+                ],
+                "summary": "测试Logger日志列表",
+                "parameters": [
+                    {
+                        "description": "data",
+                        "name": "model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.DtoLoggerList"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.R"
+                        }
+                    }
+                }
+            }
+        },
         "/user/admin/create": {
             "post": {
                 "description": "添加一个新用户",
@@ -544,138 +611,6 @@
                     }
                 }
             }
-        },
-        "/user/hello/delete": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "测试相关的接口"
-                ],
-                "summary": "测试Delete",
-                "parameters": [
-                    {
-                        "description": "data",
-                        "name": "model",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.DtoFindUser"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.R"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/hello/edit": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "测试相关的接口"
-                ],
-                "summary": "测试Edit",
-                "parameters": [
-                    {
-                        "description": "data",
-                        "name": "model",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.DtoUser"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.R"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/hello/find": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "测试相关的接口"
-                ],
-                "summary": "测试Find",
-                "parameters": [
-                    {
-                        "description": "data",
-                        "name": "model",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.DtoFindUser"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.R"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/hello/insert": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "测试相关的接口"
-                ],
-                "summary": "测试Insert",
-                "parameters": [
-                    {
-                        "description": "data",
-                        "name": "model",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.DtoUser"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.R"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -700,6 +635,9 @@
                 "id": {
                     "type": "string"
                 },
+                "name": {
+                    "type": "string"
+                },
                 "startDate": {
                     "type": "string"
                 },
@@ -711,21 +649,13 @@
                 }
             }
         },
-        "entity.ContractAddFile": {
-            "type": "object",
-            "properties": {
-                "files": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                }
-            }
-        },
         "entity.Customer": {
             "type": "object",
             "properties": {
                 "communication": {
+                    "type": "string"
+                },
+                "email": {
                     "type": "string"
                 },
                 "id": {
@@ -742,9 +672,6 @@
                     "items": {
                         "type": "string"
                     }
-                },
-                "url": {
-                    "type": "string"
                 }
             }
         },
@@ -834,25 +761,32 @@
                 }
             }
         },
-        "entity.DtoFindUser": {
+        "entity.DtoLoggerList": {
             "type": "object",
+            "required": [
+                "token",
+                "version"
+            ],
             "properties": {
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "entity.DtoUser": {
-            "type": "object",
-            "properties": {
-                "name": {
+                "keyword": {
+                    "description": "搜索的关键字",
                     "type": "string"
                 },
-                "password": {
-                    "type": "string"
+                "page": {
+                    "description": "页码",
+                    "type": "integer"
                 },
-                "username": {
-                    "type": "string"
+                "size": {
+                    "description": "每页显示多少条",
+                    "type": "integer"
+                },
+                "token": {
+                    "type": "string",
+                    "example": "xxxx"
+                },
+                "version": {
+                    "type": "string",
+                    "example": "1001"
                 }
             }
         },
